Added last main function for metropolis calculations

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7d697d44-5869-4fe3-abdd-d969d0e006e3",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fcf14cf4-603f-4d06-9d63-93f67d294c82",
    "metadata": {},
    "outputs": [],
    "source": [
     "ham = montecarlo.Hamiltonian()\n",
-    "ham.initialize(-1,.1,True)"
+    "ham.initialize(-2,1.1,True)"
    ]
   },
   {
@@ -37,7 +37,7 @@
       "#######\n",
       "#######\n",
       "after sweep 0, 1, 0, 1, 0, 1, 0, 1.\n",
-      "E after sweep -8.0\n"
+      "E after sweep -16.0\n"
      ]
     }
    ],
@@ -61,24 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f8bb555a-0df2-4b5f-a851-fcc120a0db12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2.1734600000000026, -0.1546, 0.21178027628400295, 1.6907698839999998)"
+       "(-3.578999999999998, -0.57, 0.378371989999999, 0.6239100000000001)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "random.seed(2)\n",
-    "montecarlo.montecarlo_metropolis(20,ham,10,10000,1000)"
+    "montecarlo.montecarlo_metropolis(8,ham,10,1000,100)"
    ]
   },
   {
